--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
 	"jest": {
 		"snapshotSerializers": [
 			"enzyme-to-json/serializer"
+		],
+		"collectCoverageFrom": [
+			"src/**/*.tsx",
+			"src/**/*.ts",
+			"!src/index.tsx",
+			"!src/react-app-env.d.ts"
 		]
 	}
 }
